src/main/java/org/example/breakoutdrop/Errors/ClientHTTP/Conflict409.java
package org.example.breakoutdrop.Errors.ClientHTTP;

public class Conflict409 extends RuntimeException {
    public Conflict409(String message) {
        super(message);
    }
}
